--- a/HyuJokbo/HyuJokbo/GoohaeTabUploadStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/GoohaeTabUploadStoryboard.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="eMS-b7-7eQ">
             <objects>
                 <navigationController id="O8c-PV-s2D" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="Ch0-co-9Vc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ch0-co-9Vc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -70,14 +70,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAe-Il-pgB">
                                 <rect key="frame" x="0.0" y="494" width="375" height="65"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1pb-Qg-WsC">
-                                        <rect key="frame" x="12" y="20" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="dnK-Np-VWr"/>
-                                            <constraint firstAttribute="height" constant="25" id="h5E-F8-Ne1"/>
-                                        </constraints>
-                                        <state key="normal" image="icon-photo-camera"/>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dz-w5-Kws" customClass="DLRadioButton">
                                         <rect key="frame" x="317" y="15" width="50" height="34"/>
                                         <constraints>
@@ -112,10 +104,8 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="1pb-Qg-WsC" firstAttribute="centerY" secondItem="aAe-Il-pgB" secondAttribute="centerY" id="aEb-xM-Ho0"/>
                                     <constraint firstAttribute="height" constant="65" id="fSl-tx-F1K"/>
                                     <constraint firstItem="2dz-w5-Kws" firstAttribute="centerY" secondItem="aAe-Il-pgB" secondAttribute="centerY" id="hMX-8o-MX7"/>
-                                    <constraint firstItem="1pb-Qg-WsC" firstAttribute="leading" secondItem="aAe-Il-pgB" secondAttribute="leading" constant="12" id="jk7-pl-zXP"/>
                                     <constraint firstAttribute="trailing" secondItem="2dz-w5-Kws" secondAttribute="trailing" constant="8" id="tvn-hp-ZL2"/>
                                 </constraints>
                             </view>
@@ -166,6 +156,5 @@
     </scenes>
     <resources>
         <image name="icon-cancel" width="16" height="16"/>
-        <image name="icon-photo-camera" width="104" height="104"/>
     </resources>
 </document>
